# fsoft2025_1DD_2

./: CMakeLists.txt  main.cpp
Documentation/Iteration01/: fsoft2025_1DD_2.docx
Project/headers/controllers/: Controller.h
Project/headers/exceptions/: EmptyCartException.h  InvalidLoginException.h  OrderNotFoundException.h  ProductNotFoundException.h
Project/headers/model/: Cart.h  Client.h  ClientOrder.h  Manager.h  Product.h  StepUp.h  Supplier.h  SupplierOrder.h
Project/headers/views/: Utils.h  View.h
Project/mock/: MockData.cpp  MockData.h
Project/sources/controllers/: Controller.cpp
Project/sources/exceptions/: EmptyCartException.cpp  InvalidLoginException.cpp  OrderNotFoundException.cpp  ProductNotFoundException.cpp
Project/sources/model/: Cart.cpp  Client.cpp  ClientOrder.cpp  Manager.cpp  Product.cpp  StepUp.cpp  Supplier.cpp  SupplierOrder.cpp
Project/sources/views/: Utils.cpp  View.cpp
ProjectTester/: CartTest.cpp  ClientOrderTest.cpp  ClientTest.cpp  ManagerTest.cpp  ProductTest.cpp  StepUpTest.cpp  SupplierOrderTest.cpp  SupplierTest.cpp
